# AuraForge

./: .gitignore  README.md  pyproject.toml
aura/: __init__.py  cli.py
aura/market/catalog/: README.md  index.json
aura/runtime/: agent_runner.py  agent_surface.py  agno_tools.py  bidding.py  committee.py  context_mgmt.py  control_hub.py  dag_plan_runner.py  engine.py  engine_agno_async.py  event_bus.py  ids.py  notifications.py  orchestrator_helpers.py  parallel_dispatch.py  plan.py  project.py  protocol.py  run_snapshots.py  skills.py  snapshots.py  spec_workflow.py  surface.py  validate.py  workspace_binding.py
aura/runtime/a2a/: __init__.py  activator.py  mailbox.py  protocol.py  runtime.py  worker.py
aura/runtime/capability/: __init__.py  builder.py
aura/runtime/context/: __init__.py  builder.py
aura/runtime/control/: __init__.py  agent_status.py  bidding.py  circuit_breaker.py  committee.py  dashboard.py  dispatcher.py  health_probe.py  hub.py  notifications.py  policy.py  recovery.py  runner.py
aura/runtime/dag/: __init__.py  graph.py  scheduler.py  serializer.py
aura/runtime/event_log/: __init__.py  extractors.py  logger.py  store.py
aura/runtime/examples/: README.md  phase3_acceptance_check.py  (+1 more)
aura/surfaces/: cloud_surface.py.stub  web_surface.py.stub
aura/ui/: console_ui.py
docs/: workspace-v1-draft.md
docs/design/: restructure-v3.md
tests/: test_capability_builder.py  test_context_builder.py  test_engine_adaptation.py  test_gap_phase1_runner.py  test_gap_phase2_committee.py  test_gap_phase3_bidding.py  test_gap_phase4_completion.py
(+510 files in other folders)
